# glide

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: the-cascade-pattern.md
examples/claude-code/: README.md
examples/code-puppy/: README.md
glide/: __init__.py  cascade.py  cli.py  config.py  metrics.py  proxy.py  store.py  tracker.py  translator.py
llm_relay/: __init__.py  cascade.py  cli.py  config.py  proxy.py  tracker.py  translator.py
tests/: test_cascade.py  test_hedge_decision.py  test_tracker.py
